Adjust logo width for improved responsiveness on various screen sizes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   .logo {
     aspect-ratio: 1/1;
-    width: 85vmin;
+    width: 65vmin;
 
     background: url('logo.png') no-repeat;
     background-size: cover;
@@ -28,9 +28,9 @@
     border-radius: 2px;
   }
 
-  @media (max-width: 768px) {
+  @media (min-width: 768px) {
     .logo {
-      max-width: 500px;
+      width: 60vmin;
     }
   }
 
